--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+spring.main.allow-bean-definition-overriding=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/challenge
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+springdoc.api-docs.path=/api-docs
+springdoc.api-docs.enabled=true
+
 #RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
